--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,11 @@ jobs:
       - run:
           name: Test
           command: mvn test
-
+      - store_artifacts:
+          path:  target
+      - run:
+          name: Send to codecov
+          command: bash <(curl -s https://codecov.io/bash)
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
