--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
                             <artifactId>lombok</artifactId>
                             <version>${org.projectlombok.version}</version>
                         </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>0.2.0</version>
+                        </path>
                         <!-- other annotation processors -->
                     </annotationProcessorPaths>
                     <compilerArgs>
