--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,15 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>woodstox-core-asl</artifactId>
+            <version>4.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
